--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -14,9 +14,14 @@ environment:
   flutter: '>=3.27.0'
 
 dependencies:
+  anthropic_sdk_dart: ^0.2.0+1
   flutter:
     sdk: flutter
   flutter_ai_toolkit: ^0.6.7
+  ollama_dart: ^0.2.2+1
+  openai_dart: ^0.4.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
