--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_ai_toolkit: ^0.6.7
   ollama_dart: ^0.2.2+1
   openai_dart: ^0.4.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
