--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_ai_providers
 description: Community-contributed providers for the Flutter AI Toolkit.
-version: 0.0.1-dev.1
+version: 0.1.0
 repository: https://github.com/davidmigloz/flutter_ai_community/tree/main/packages/flutter_ai_providers
-issue_tracker: https://github.com/davidmigloz/flutter_ai_community/issues?q=label:p:langgraph
+issue_tracker: https://github.com/davidmigloz/flutter_ai_community/issues
 
 topics:
   - ai
@@ -20,7 +20,7 @@ dependencies:
   flutter_ai_toolkit: ^0.6.7
   ollama_dart: ^0.2.2+1
   openai_dart: ^0.4.5
-  http: ^1.2.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
