--- a/packages/flutter_ai_providers/example/pubspec.yaml
+++ b/packages/flutter_ai_providers/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: example
 description: "A Flutter example app for the flutter_ai_providers package."
-publish_to: 'none'
+publish_to: "none"
 
 environment:
   sdk: ^3.5.0
@@ -9,10 +9,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  flutter_ai_toolkit: ^0.7.1
+  flutter_ai_toolkit: ^0.9.1
   # flutter_ai_providers: ^0.1.0
   flutter_ai_providers:
     path: ..
+  dartantic_ai: ^0.7.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
