--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -11,19 +11,20 @@ topics:
 
 environment:
   sdk: ^3.5.0
-  flutter: '>=3.27.0'
+  flutter: ">=3.27.0"
 
 dependencies:
   llama_sdk: ^0.0.4
   anthropic_sdk_dart: ^0.2.0+1
   flutter:
     sdk: flutter
-  flutter_ai_toolkit: ^0.7.1
+  flutter_ai_toolkit: ^0.9.1
   ollama_dart: ^0.2.2+1
   openai_dart: ^0.4.5
   http: ^1.3.0
+  dartantic_ai: ^0.7.0
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
