updated CHANGELOG DartanticProvider for the latest version of dartantic_ai; add macOS entitlements

--- a/packages/flutter_ai_providers/example/pubspec.yaml
+++ b/packages/flutter_ai_providers/example/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   # flutter_ai_providers: ^0.1.0
   flutter_ai_providers:
     path: ..
-  dartantic_ai: ^0.7.0
+  dartantic_ai:
+    path: ../../../../dartantic_ai
 
 dev_dependencies:
   flutter_lints: ^5.0.0
