--- a/packages/flutter_ai_providers/example/macos/Runner/Release.entitlements
+++ b/packages/flutter_ai_providers/example/macos/Runner/Release.entitlements
@@ -7,4 +7,8 @@
 		<key>com.apple.security.network.client</key>
 		<true/>
 	</dict>
+	<key>com.apple.security.device.audio-input</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-only</key>
+	<true/>
 </plist>
