--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
     sdk: flutter
   flutter_ai_toolkit: ^0.9.1
   ollama_dart: ^0.2.2+1
-  openai_dart: ^0.4.5
+  openai_dart: ^0.5.1
   http: ^1.3.0
-  dartantic_ai: ^0.7.0
+  dartantic_ai:
+    path: ../../../dartantic_ai
 
 dev_dependencies:
   flutter_lints: ^6.0.0
