--- a/packages/flutter_ai_providers/example/pubspec.yaml
+++ b/packages/flutter_ai_providers/example/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
   # flutter_ai_providers: ^0.1.0
   flutter_ai_providers:
     path: ..
-  dartantic_ai:
-    path: ../../../../dartantic_ai
+  dartantic_ai: ^0.8.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
