--- a/packages/flutter_ai_providers/pubspec.yaml
+++ b/packages/flutter_ai_providers/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_ai_providers
 description: Community-contributed providers for the Flutter AI Toolkit.
-version: 0.2.0
+version: 0.3.0
 repository: https://github.com/davidmigloz/flutter_ai_community/tree/main/packages/flutter_ai_providers
 issue_tracker: https://github.com/davidmigloz/flutter_ai_community/issues
 
@@ -22,8 +22,7 @@ dependencies:
   ollama_dart: ^0.2.2+1
   openai_dart: ^0.5.1
   http: ^1.3.0
-  dartantic_ai:
-    path: ../../../dartantic_ai
+  dartantic_ai: ^0.8.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
